2002-05-10  Anders Carlsson  <andersca@gnu.org>

	* schemas/desktop_gnome_peripherals_mouse.schemas:
	Set default values of mouse_acceleration and mouse_threshold
	to -1, which means "use system default".
	
2002-05-08  Glynn Foster  <glynn.foster@sun.com>

	* schemas/desktop_gnome_interface.schemas: Add new key for
	statusbar_meter_on_right and set it, by default, to false.

2002-05-06  Anders Carlsson  <andersca@gnu.org>

	* schemas/desktop_gnome_file_views.schemas: Fix tyop.

	* schemas/desktop_gnome_interface.schemas: Add both_horiz to the
	list of valid toolbar styles.

2002-05-05  Gustavo Maciel Dias Vieira  <gdvieira@zaz.com.br>

	* configure.in (ALL_LINGUAS): Added pt_BR.

2002-05-04  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: Added Basque (eu) and Vietnamese (vi) to ALL_LINGUAS

2002-05-03  Mikael Hallendal  <micke@codefactory.se>

	* libgnome/gnome-help.c
	(gnome_help_display_desktop): don't free the variables before
	  using them, thanks Satyajit
	- Fixes #79870
	(gnome_help_display_with_doc_id): 
	- always send the full uri to the help browsers. 
	(gnome_help_display_desktop): same.

2002-04-29  Anders Carlsson  <andersca@gnu.org>

	* Release 1.116.0

	* configure.in:
	* libgnome/gnome-init.c: (libgnome_post_args_parse):
	Call bindtextdomain_codeset if it's available.
	
2002-04-24  Zbigniew Chyla <cyba@gnome.pl>

	* gnome-data/gnome-2.soundlist.in, gnome-data/gtk-events-2.soundlist.in:
	Removed translations, replaced "description" with "_description".

2002-04-22  Anders Carlsson  <andersca@gnu.org>

	* Release 1.115.0

2002-04-19  Anders Carlsson  <andersca@gnu.org>

	* gnome-data/Makefile.am (soundlist_in_files): Doh, add a
	line separator here.

2002-04-16  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-data/Makefile.am: Fix intltool support.
	* gnome-data/.cvsignore: Ignore the generated files.
	
2002-04-11  Mark McLoughlin  <mark@skynet.ie>

	* libgnome/gnome-exec.c: (safe_read): impl to handle EINTR
	and EAGAIN.