@@ -1,3 +1,8 @@
+2002-05-13  Yogeesh MB  <yogeeshappa.mathighatta@wipro.com>
+
+	* libgnome/configure.in, libgnome/acconfig.h,
+	libgnome/help_conveters/man/gnome-man2html.c: fixes Bug#76331
+
 2002-05-10  Anders Carlsson  <andersca@gnu.org>
 
 	* schemas/desktop_gnome_peripherals_mouse.schemas:
